<resources>
    <string name="app_name">Soft Meth Pizza Shop</string>
    <string name="invalid_number">Invalid Phone Number!</string>
    <string name="order_pizza">Ordering Pizza!</string>
    <string name="pizza_size">Size</string>
    <string name="topping_add">Add</string>
    <string name="topping_remove">Remove</string>
    <string name="add_to_order">Add to Order</string>
    <string name="price_cost">Price</string>
    <string name="deluxe_pizza">Deluxe</string>
    <string name="hawaiian_pizza">Hawaiian</string>
    <string name="pepperoni_pizza">Pepperoni</string>
    <string name="selected_toppings_str">Selected Toppings</string>
    <string name="available_toppings_str">Available Toppings</string>
    <string name="max_toppings">Maximum Toppins is 7!</string>
    <string name="chicken_topping">Chicken</string>
    <string name="beef_topping">Beef</string>
    <string name="pepperoni_topping">Pepperoni</string>
    <string name="ham_topping">Ham</string>
    <string name="sausage_topping">Sausage</string>
    <string name="cheese_topping">Cheese</string>
    <string name="pepper_topping">Pepper</string>
    <string name="onion_topping">Onion</string>
    <string name="mushroom_topping">Mushroom</string>
    <string name="olive_topping">Olive</string>
    <string name="pineapple_topping">Pineapple</string>
    <string name="small_pizza">Small</string>
    <string name="medium_pizza">Medium</string>
    <string name="large_pizza">Large</string>
    <string name="Subtotal">Subtotal: </string>
    <string name="Sales_Tax">Sales Tax: </string>
    <string name="Zero">0.00</string>
    <string name="Remove_Pizza">Remove Pizza</string>
    <string name="Place_Order">Place Order</string>
    <string name="Current_Order">Current Order</string>
    <string name="Store_Orders">Store Orders</string>
    <string name="Order_Total">Order Total: </string>
    <string name="Total">Total</string>
    <string name="Customer_Phone_Number">Customer Phone Number:</string>
    <string name="Cancel_Order">Cancel Order</string>
    <string name="no_orders">No Orders Available!</string>
    <string name="selected"> is selected!</string>
    <string name="empty_order">Nothing in the order!</string>
    <string name="order_placed">Order Placed!</string>
    <string name="nothing_selected">Nothing is selected!</string>
</resources>