<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PizzaActivity">

    <ImageView
        android:id="@+id/pizza_picture"
        android:layout_width="138dp"
        android:layout_height="171dp"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/selected_box"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/d_pizza" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="49dp"
        android:layout_height="39dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="40dp"
        android:text="@string/pizza_size"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/size_dropdown"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/size_dropdown"
        android:layout_width="103dp"
        android:layout_height="48dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/available_box"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ListView
        android:id="@+id/selected_box"
        android:layout_width="141dp"
        android:layout_height="197dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/available_box"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/available_box"
        android:layout_width="159dp"
        android:layout_height="198dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/selected_box" />

    <Button
        android:id="@+id/add_to_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="32dp"
        android:onClick="buy_pizza"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="27dp"
        android:text="@string/price_cost"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/add_to_order"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/price_bar"
        android:layout_width="213dp"
        android:layout_height="53dp"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="12dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/add_to_order"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="61dp"
        android:text="@string/selected_toppings_str"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="52dp"
        android:text="@string/available_toppings_str"
        app:layout_constraintBottom_toTopOf="@+id/price_bar"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>